# pebble-tip-calc

./: README.md  appinfo.json  project.pbw
project/: CMakeLists.txt  appinfo.json
project/src/: calculator.c  tipcalc.c  tipcalc.h  utils.c  utils.h
src/: calculator.c  calculator.h  tipcalc.c  tipcalc.h  utils.c
